FLOW/www/css/myAccount.css
.fbackgroundMonCompte {
	background-color: white !important;
}

#freturnMonCompte {
	position: absolute;
	top: calc(4 * var(--custom-vh));
	left: 3vw;
}

#fbandeauMonCompte {
	position: absolute;
	top: calc(4.5 * var(--custom-vh));
	background-color: white;
	right: 0vw;
	width: 65vw;
	height: calc(8 * var(--custom-vh));
	border-radius: 25px 0px 0px 25px;
	box-shadow: 0px 3px 8px rgba(120, 120, 120, 0.2);
}

#fmyprofilPicture {
	position: absolute;
	top: calc(8.5 * var(--custom-vh));
	left: 3.5vw;
	width: 27vw;
	height: 27vw;
	border-radius: 22vw;
	box-shadow: 0px 3.5px 8px rgba(0, 0, 0, 0.2);
	border: solid 3px white;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	/* background-image: url("../src/pictures/follower2.jpg") !important; */
}

#fnameMonCompte {
	position: absolute;
	color: #1a84ef;
	font-size: 28px;
	left: 36vw;
	top: calc(13 * var(--custom-vh));
	font-family: Roboto-Regular;
}

.finfoBandeau {
	color: #92abb2;
}

#ffLowBandeau {
	position: absolute;
	top: calc(4.5 * var(--custom-vh));
	right: 46vw;
	width: 16vw;
	font-size: 16px;
	font-family: Roboto-Thin;
	text-align: center;
}

#ffollowersBandeau {
	position: absolute;
	top: calc(4.5 * var(--custom-vh));
	right: 28vw;
	width: 16vw;
	font-size: 16px;
	font-family: Roboto-Thin;
	text-align: center;
}

#ffollowingBandeau {
	position: absolute;
	top: calc(4.5 * var(--custom-vh));
	right: 8vw;
	width: 16vw;
	font-size: 16px;
	font-family: Roboto-Thin;
	text-align: center;
}

#fflowmyBandeauChiffre {
	font-size: 22px;
	position: absolute;
	right: 46vw;
	top: calc(1 * var(--custom-vh));
	font-family: Roboto-Regular;
	color: #4a4a4a;
	width: 16vw;
	text-align: center;
}

#ffollowersmyBandeauChiffre {
	font-size: 22px;
	position: absolute;
	right: 28vw;
	top: calc(1 * var(--custom-vh));
	font-family: Roboto-Regular;
	color: #4a4a4a;
	width: 16vw;
	text-align: center;
}

#ffollowingmyBandeauChiffre {
	font-size: 22px;
	position: absolute;
	right: 4vw;
	top: calc(1 * var(--custom-vh));
	font-family: Roboto-Regular;
	width: 20vw;
	text-align: center;
}

#fbioMonCompte {
	color: #92abb2;
	font-size: 15px;
	position: absolute;
	top: calc(21 * var(--custom-vh));
	left: 36vw;
}

#feditProfil {
	border: solid 1.5px #92abb2;
	color: #92abb2;
	border-radius: 22vw;
	width: 150px;
	text-align: center;
	font-size: 14px;
	padding: 2.5px;
	position: absolute;
	top: calc(25 * var(--custom-vh));
	left: 43vw;
}

.fnavMonCompte {
	position: absolute;
	top: calc(22 * var(--custom-vh)) !important;
	left: 22vw !important;
	font-size: 19px !important;
	background-color: transparent !important;
	box-shadow: none !important;
	width: 56vw !important;
	left: 0 !important;
}

.fnavMonCompteTransitionTop {
	transition-duration: 0.4s !important;
}

.fnavMonCompteTransitionDown {
	transition-duration: 0.2s !important;
}

.MonCompte {
	color: #92abb2 !important;
	filter: none !important;
	width: auto !important;
	margin-left: -20px;
	margin-right: 60px;
}

.MonCompte.active {
	color: #1a84ef !important;
	filter: none !important;
	border-bottom: solid 2px #1a84ef;
	padding-top: 2px;
}

.ftabsMonCompte {
	/* position: absolute !important; */
	top: calc(32 * var(--custom-vh));
	left: 0vw;
	transition-duration: 0.4s;
}

#myprivateID {
	color: #1a84ef;
	position: absolute;
	font-size: 18px;
	left: 36vw;
	top: calc(17 * var(--custom-vh));
	font-family: Roboto-Regular;
	opacity: 0.5;
}

.fblockMonCompte {
	margin-top: 0vh !important;
	padding-left: 0vw !important;
	padding-right: 0vw !important;
}

.fblockMonComptePadding {
	padding-top: calc(1.5 * var(--custom-vh)) !important;
}

#accountBannerScroll {
	transition-duration: 0.4s;
}

#fmybigProfilPictureContainer {
	top: 0;
	position: absolute;
	transform: scale(0);
	width: 100vw;
	height: calc(100 * var(--custom-vh));
	/* border-radius: 50%; */
	background-color: white;
	transition: all 0.5s;
	z-index: 1000;
	opacity: 0;
	pointer-events: none;
	transform: scale(0.4);
	transition-duration: 0.3s;
}

#fmybigProfilPicture {
	/* background-image: url("../src/pictures/girl1.jpg"); */
	position: absolute;
	z-index: 505;
	width: 101vw;
	height: calc(80 * var(--custom-vh));
	top: calc(10 * var(--custom-vh));
	background-position: center;
	background-repeat: no-repeat;
	background-size: contain;
}

.sizeTollBar {
	width: 47.5vw !important;
	/* text-align: center; */
	margin-left: 26.25vw;
}

#returnmyProfilPicture {
	position: absolute;
	top: calc(3 * var(--custom-vh));
	right: 3vw;
	background-color: none;
	color: none;
	width: 7vw;
}

#editProfilePopup {
	position: absolute;
	/*transform: scale(0);*/
	width: 75vw;
	height: calc(45 * var(--custom-vh));
	top: calc(15 * var(--custom-vh));
	left: 12.5vw;
	border-radius: 5%;
	background-color: white;
	transition: all 0.4s;
	z-index: 1000;
	border: 1px solid #707070;
	transform: scale(0.4);
	opacity: 0;
	pointer-events: none;
	transition-duration: 0.3s;
}

#feditProfilePopupContainer {
	position: absolute;
	/* transform: scale(0); */
	top: 0;
	opacity: 0;
	width: 100vw;
	height: calc(100 * var(--custom-vh));
	/* border-radius: 50%; */
	background-color: rgba(0, 0, 0, 0.6);
	transition: all 0.4s;
	z-index: 999;
	pointer-events: none;
}

#fprofilPicturePopup {
	position: absolute;
	top: calc(3 * var(--custom-vh));
	left: 22.5vw;
	width: 30vw;
	height: 30vw;
	border-radius: 22vw;
	box-shadow: 0px 3.5px 8px rgba(0, 0, 0, 0.2);
	border: solid 3px white;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	/* background-image: url("../src/pictures/follower2.jpg") !important; */
}

#editProfileName {
	position: absolute;
	border: none;
	border-bottom: solid 1px #1a84ef;
	width: 40vw;
	left: 17.5vw;
	top: calc(20 * var(--custom-vh));
	font-size: calc(3 * var(--custom-vh));
	color: #1a84ef;
	font-family: Roboto-Regular;
	text-align: center;
}

#feditBio {
	position: absolute;
	top: calc(28 * var(--custom-vh));
	left: 7.5vw;
	border: solid 1px #92abb2;
	border-radius: 10px;
	color: #92abb2;
	font-size: 4vw;
	font-family: Roboto-Lightitalic;
	width: 59vw;
	padding-left: 1vw;
}

#fcloseProfilPopup {
	position: absolute;
	top: calc(2 * var(--custom-vh));
	right: 4vw;
	width: 5vw;
	height: 5vw;
}

#MyActivity {
	padding-bottom: calc(10 * var(--custom-vh)) !important;
}

#MyLikes {
	padding-bottom: calc(10 * var(--custom-vh)) !important;
}

.disconnect_btn {
	position: absolute;
	top: calc(39 * var(--custom-vh));
	left: 22.5vw;
	width: 30vw;
	height: 30px;
	font-family: Roboto-Light;
	color: #d62222;
	text-align: center;
	line-height: 30px;
	vertical-align: middle;
	border: 1px solid #d62222;
	border-radius: 25px;
}

.disconnect_btn:active {
	background: #d62222;
	color: white;
}

.empty_content {
	position: absolute;
	top: 25vh;
	left: 0;
	width: 100vw;
	text-align: center;
	font-size: 15px;
	font-family: Roboto-Regular;
	color: #92abb2;
}
.shake {
	animation: shake 0.3s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
}

@keyframes shake {
	/* 10%, 90% {
      transform: translate3d(-1px, 0, 0);
    } */

	/* 20%, 80% {
      transform: translate3d(2px, 0, 0);
    } */

	25%,
	75% {
		transform: translate3d(-2px, 0, 0);
	}

	50% {
		transform: translate3d(2px, 0, 0);
	}
}

